--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=manage-gym
+# Database connection properties (replace with your actual details)
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update  
+
+spring.jpa.show-sql=true
