Hidden DB Credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=manage-gym
 # Database connection properties (replace with your actual details)
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${DB_URI}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_USER_PASSWORD}
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update  
 
