--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=manage-gym
 # Database connection properties (replace with your actual details)
-spring.datasource.url=${DB_URI}
-spring.datasource.username=${DB_USER_NAME}
+spring.datasource.url=jdbc:postgresql://pg-gym-project-hagu0987-gym.d.aivencloud.com:14930/defaultdb
+spring.datasource.username=avnadmin
 spring.datasource.password=${DB_USER_PASSWORD}
-spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update  
 
 spring.jpa.show-sql=true
